--- a/sass/3-layout/_about.scss
+++ b/sass/3-layout/_about.scss
@@ -1,103 +1,92 @@
 #about {
-    min-height: 70vh;
-    padding-bottom: 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  min-height: 70vh;
+  padding-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
 
 .about-title {
-    margin: 0;
-    margin-left: 5rem;
-    padding: 1.5rem;
-    font-family: "poppins-medium", sans-serif;
-    font-size: 2rem;
-    text-align: center;
-    letter-spacing: .5rem;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 2px $grey;
-    
+  margin: 0;
+  margin-left: 5rem;
+  padding: 1.5rem;
+  font-family: 'poppins-medium', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  text-shadow: 4px 0px 2px $grey;
 }
 
+.about-content {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 930px;
 
-.about-content{
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 930px;
+  &__div {
+    // border: .5rem solid darken($link, 7%);
+    border-radius: 5%;
+  }
 
-    &__div {
-        // border: .5rem solid darken($link, 7%);
-        border-radius: 5%;
-    }
+  &__div--img {
+    width: 23rem;
+    border-radius: 5%;
+    // position: relative;
+    // top: -2rem;
+    // left: 2rem;
+    box-shadow: -3px 3px 5px 5px #0000006b;
+    transition: 0.1s;
 
-    &__div--img {
-        width: 20rem;
-        border-radius: 5%;
-        // position: relative;
-        // top: -2rem;
-        // left: 2rem;
-        box-shadow: -3px 3px 5px 5px #0000006b;
-        transition: .1s;
+    // &:hover {
+    //     top: 0;
+    //     left: 0;
+    //     box-shadow: none;
+    // }
+  }
 
-        // &:hover {
-        //     top: 0;
-        //     left: 0;
-        //     box-shadow: none;
-        // }
-    }
+  &__info {
+    max-width: 500px;
+  }
 
-    &__info {
-        max-width: 500px;
-    }
+  &__info--text {
+    font-family: 'poppins-regular', sans-serif;
+    line-height: 1.3;
+    font-size: 1.4rem;
+  }
 
-    &__info--text {
-        font-family: "poppins-regular", sans-serif;
-        line-height: 1.3;
-        font-size: 1.03rem;
-    }
-
-    &__info--btns {
-        padding-top: 1rem;
-    }
-
+  &__info--btns {
+    padding-top: 1rem;
+  }
 }
 
 .btn__about {
-    padding: .7rem;
-    font-size: 1.1rem;
-    margin-right: 1rem;
-    
-    
-    &:hover {
-        background-color: lighten($off-black, 5%);
-        color: $off-white;
-    }
+  padding: 0.7rem;
+  font-size: 1.1rem;
+  margin-right: 1rem;
+
+  &:hover {
+    background-color: lighten($off-black, 5%);
+    color: $off-white;
+  }
 }
 
-
-
-
-
-
 @media (max-width: $breakpoint-tablet) {
+  .about-title {
+    margin: 0;
+  }
 
-    .about-title {
-        margin: 0;
+  .about-content {
+    flex-direction: column;
+    align-items: center;
+
+    &__div--img {
+      position: inherit;
     }
 
-    .about-content {
-        flex-direction: column;
-        align-items: center;
-
-        &__div--img {
-            position: inherit;
-        }
-
-        &__info {
-           text-align: center;
-        }
+    &__info {
+      text-align: center;
     }
+  }
 }
