--- a/sass/3-layout/_navbar.scss
+++ b/sass/3-layout/_navbar.scss
@@ -1,90 +1,68 @@
 .navbar-container {
-    background-color: rgba(0, 0, 0, 0.603);
-    padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.603);
+  padding: 0.8rem;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 900px;
-    font-family: "poppins-medium", sans-serif;
-    color: $off-white;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 900px;
+  font-family: 'poppins-medium', sans-serif;
+  color: $off-white;
 
-    &__logo--img {
-        width: 8.5rem;
+  &__logo--img {
+    width: 3.5rem;
+  }
+
+  &__toggle {
+    display: none;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+  }
+
+  &__list--item {
+    color: $off-white;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+
+    &:hover {
+      color: $main-color;
     }
+  }
+}
+
+@media (max-width: $breakpoint-tablet) {
+  .navbar {
+    flex-direction: column;
 
     &__toggle {
-        display: none;
+      display: initial;
+      align-self: flex-end;
+      position: absolute;
+      top: 17px;
+      cursor: pointer;
+      font-size: 1.5rem;
+
+      &:hover {
+        color: $main-color;
+      }
     }
 
     &__list {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 50%;
+      flex-direction: column;
+      align-items: flex-start;
+      height: 15rem;
     }
 
-    &__list--item {
-        color: $off-white;
-        font-size: 1rem;
-        text-transform: uppercase;
-
-       &:hover {
-            color: $main-color;
-        }
+    &__list--hide {
+      display: none;
     }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: $breakpoint-tablet) {
-  
-    .navbar {
-       flex-direction: column;
-       
-       &__toggle {
-        display: initial;
-        align-self: flex-end;
-        position: absolute;
-        top: 17px;
-        cursor: pointer;
-        font-size: 1.5rem;
-
-        &:hover {
-            color: $main-color;
-        }
-
-       }
-
-       &__list {
-        flex-direction: column;
-        align-items: flex-start;
-        height: 15rem;
-      
-       }
-
-
-       &__list--hide {
-        display: none;
-      }
-
-    }
-    
+  }
 }
