--- a/sass/3-layout/_skills.scss
+++ b/sass/3-layout/_skills.scss
@@ -1,86 +1,74 @@
 #skills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 1rem;
-    min-height:60vh;
-    background: linear-gradient(to right,  rgba(0, 0, 0, 0.356),rgba(0, 0, 0, 0.356)),
-    url("../../images/portfolio/niketh-vellanki-252581-unsplash.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: $off-white;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 1rem;
+  min-height: 60vh;
+  background-color: #383838;
+  color: $off-white;
 }
 
 .skills-title {
-    margin: 2rem 0;
-    padding: 1.5rem;
-    font-family: "poppins-medium", sans-serif;
-    font-size: 2rem;
-    text-align: center;
-    letter-spacing: .5rem;
-    text-transform: uppercase;
-    text-shadow: 4px 0px 2px $grey;
+  margin: 2rem 0;
+  padding: 1.5rem;
+  font-family: 'poppins-medium', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px $main-color;
 }
 
-
 .skills-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 930px;
-
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 930px;
 }
 
 .skills__list {
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    &--header {
-        margin: 0;
-        margin-bottom: 1rem;
-        font-family: "poppins-medium", sans-serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  &--header {
+    margin: 0;
+    margin-bottom: 1rem;
+    font-family: 'poppins-medium', sans-serif;
 
-         &::after { 
-        content: "";
-        display: table;
-        padding: 1px 24px;
-        background-color: $main-color;
-
-        } 
+    &::after {
+      content: '';
+      display: table;
+      padding: 1px 24px;
+      background-color: $main-color;
     }
+  }
 
-   
-
-    &--item {
-        font-family: "poppins-regular", sans-serif;
-        font-size: 1rem;
-        text-indent: .6rem;
-        line-height: 1.5rem;
-        &::before { 
-            content: "";
-            display: inline-table;
-            position: relative;
-            top: -7px;
-            left: -8px;
-            margin-right: .6rem;
-            padding: 1px 10px;
-            background-color: $main-color;
-    
-        }
+  &--item {
+    font-family: 'poppins-regular', sans-serif;
+    font-size: 1rem;
+    text-indent: 0.6rem;
+    line-height: 1.5rem;
+    &::before {
+      content: '';
+      display: inline-table;
+      position: relative;
+      top: -7px;
+      left: -8px;
+      margin-right: 0.6rem;
+      padding: 1px 10px;
+      background-color: $main-color;
     }
- }
+  }
+}
 
+@media (max-width: $breakpoint-tablet) {
+  .skills-container {
+    flex-direction: column;
+    margin-left: 15%;
+    text-align: left;
+  }
 
- @media (max-width: $breakpoint-tablet) {
-    .skills-container {
-        flex-direction: column;
-        margin-left: 15%;
-        text-align: left;
-    }
-
-    .skills__list {
-        margin-bottom: 2rem;
-    }
- }
+  .skills__list {
+    margin-bottom: 2rem;
+  }
+}
